# Lima-camera-photonicscience

./: .gitignore  CMakeLists.txt  README.md
conda/camera/: meta.yaml
conda/tango/: meta.yaml
doc/: index.rst
include/: PhotonicScienceCamera.h  PhotonicScienceCompatibility.h  PhotonicScienceInterface.h
python/: PhotonicScience.py
sdk/ImageStar4022_v1.7/: imagestar4022control.lib
sdk/ImageStar4022_v1.7/PSL_camera_files/: identifier.txt
sdk/ImageStar4022_v2.5/: imagestar4022control.h  imagestar4022control.lib
sip/: PhotonicScienceCamera.sip  PhotonicScienceInterface.sip
src/: PhotonicScienceCamera.cpp  PhotonicScienceInterface.cpp
tango/: CMakeLists.txt
